[project]
name = "sol-trend-pullback-v4"
version = "0.1.0"
description = ""
authors = [
    {name = "gvardovski",email = "gvardovski@icloud.com"}
]
requires-python = ">=3.14"
dependencies = [
    "ccxt (>=4.5.67,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "streamlit (>=1.60.0,<2.0.0)",
    "plotly (>=6.9.0,<7.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
